--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r app/requirements.txt
     - name: Run migrations
       run: python manage.py migrate
     - name: Run Tests
