--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r app/requirements.txt
     - name: Run migrations
+      env: 
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       run: python app/manage.py migrate
     - name: Run Tests
       run: |
