fix github workflow action

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,11 +5,14 @@ on: [push]
 jobs:
   build:
 
+    env:
+      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6]
+        python-version: [3.7]
 
     steps:
     - uses: actions/checkout@v2
