--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==1.1.1
 openapi-codec==1.3.2
 packaging==20.4
 Pillow==7.2.0
+psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dotenv==0.14.0
 pytz==2020.1
