--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -7,8 +7,13 @@
         - POSTGRES_DB=postgres
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
+    migrate:
+      build: .
+      command: python manage.py migrate
+      depends_on:
+        - db
     web:
-      build: ..
+      build: .
       command: python manage.py runserver 0.0.0.0:8000
       volumes:
         - .:/code
@@ -16,3 +21,4 @@
         - "8000:8000"
       depends_on:
         - db
+        - migrate
