--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.1
+django-cors-headers==3.5.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
@@ -15,6 +16,7 @@ MarkupSafe==1.1.1
 openapi-codec==1.3.2
 packaging==20.4
 Pillow==7.2.0
+psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dotenv==0.14.0
 pytz==2020.1
