add saving to schedule and tryout on post

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -14,6 +14,12 @@
       command: python manage.py migrate
       depends_on:
         - db
+    test:
+      build: .
+      command: python manage.py test
+      depends_on:
+        - db
+        - migrate
     web:
       build: .
       command: python manage.py runserver 0.0.0.0:8000
