--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,8 +3,10 @@ certifi==2020.6.20
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.3
 Django==3.1.1
 django-cors-headers==3.5.0
+django-nose==1.4.7
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
@@ -13,6 +15,7 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+nose==1.3.7
 openapi-codec==1.3.2
 packaging==20.4
 Pillow==7.2.0
