--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,10 +4,10 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.1
-django-cors-headers==3.5.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
+httpie==2.2.0
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
@@ -16,7 +16,7 @@ MarkupSafe==1.1.1
 openapi-codec==1.3.2
 packaging==20.4
 Pillow==7.2.0
-psycopg2-binary==2.8.6
+Pygments==2.6.1
 pyparsing==2.4.7
 python-dotenv==0.14.0
 pytz==2020.1
