--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,10 +29,9 @@ jobs:
     - name: Run Tests
       run: |
         python app/manage.py test
-    - name: Deploy azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - run: |
           az appservice plan create -g studentidrett-backend -n nsi-app
@@ -41,4 +40,4 @@ jobs:
     - name: Azure WebApp
         uses: Azure/webapps-deploy@v2
         with:
-          app-name: pyweb
+          app-name: nsi-django
