--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,6 +29,10 @@ jobs:
     - name: Run Tests
       run: |
         python app/manage.py test
+
+    - name: python-lint
+      uses: CyberZHG/github-action-python-lint@0.0.2
+
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
