--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,4 +4,5 @@ RUN mkdir /code
 WORKDIR /code
 COPY requirements.txt /code/
 RUN pip install -r requirements.txt
-COPY . /code/
+COPY . .
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "app.wsgi"]
