--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,7 @@ django-nose==1.4.7
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
+gunicorn==20.0.4
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
