--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Create Docker Image
       run: |
         python -m pip install --upgrade pip
-        docker-compose up -d --build
+        cd app && docker-compose up -d --build
 
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v2
