--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.1
+django-cors-headers==3.5.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
