--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,4 +46,4 @@ jobs:
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v2
       with:
-        app-name: app_web_1
+        app-name: nsi-django
