--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,3 +6,4 @@ COPY requirements.txt /code/
 RUN pip install -r requirements.txt
 COPY . .
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "app.wsgi"]
+EXPOSE 8000
