--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -5,11 +5,8 @@
       image: postgres
       ports:
         - "5432:5432"
-      environment:
-        - POSTGRES_DB=nsi
-        - POSTGRES_USER=django
-        - POSTGRES_PASSWORD=django
-        - POSTGRES_HOST_AUTH_METHOD=trust
+      env_file:
+        - .env
       networks:
         - postgres_network
     migrate:
@@ -20,12 +17,16 @@
       depends_on:
         - postgres
     web:
-      build: .
+      build:
+        context: .
+        dockerfile: Dockerfile
       command: python manage.py runserver 0.0.0.0:8000
       volumes:
         - .:/code
       ports:
         - "8000:8000"
+      networks:
+        - postgres_network
       depends_on:
         - postgres
         - migrate
