--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,7 +10,7 @@ django-nose==1.4.7
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
-httpie==2.2.0
+gunicorn==20.0.4
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
@@ -20,7 +20,8 @@ nose==1.3.7
 openapi-codec==1.3.2
 packaging==20.4
 Pillow==7.2.0
-Pygments==2.6.1
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dotenv==0.14.0
 pytz==2020.1
