Feat/view teams v2 (#21)
* init docker

* docker things

* begin rewrite model

* setup postgres database

* add more tests

* commit before fixing headers

* improve team-model, todo fix manytomany

* add saving to schedule and tryout on post

* add test coverage when running tests

* change model of club and begin writing tests

* make more tests

* finish basic tests for club model

* update tests to run on postgres

* Add extra test for post in clubs

* fix tests to work with postgres

* remove local migrations

* update deps to include psycopg2-library

* add database config for github actions

* fix workflow for postgres

* update settings with correct db-credentials

* update db credentials

* fix migration error

Co-authored-by: eolweus <37080270+eolweus@users.noreply.github.com>
Co-authored-by: eirsture <eirik.sture@gmail.com>

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,17 @@ jobs:
       matrix:
         python-version: [3.7]
 
+    services:
+      db:
+        image: postgres
+        env:
+          POSTGRES_DB: github-actions
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+        - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -28,4 +39,5 @@ jobs:
       run: python app/manage.py migrate
     - name: Run Tests
       run: |
-        python app/manage.py test
+        cd app
+        python manage.py test
