--- a/app/.pre-commit-config.yaml
+++ b/app/.pre-commit-config.yaml
@@ -18,3 +18,7 @@ repos:
     rev: 20.8b1
     hooks:
       - id: black
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.5.3
+    hooks:
+      - id: isort
