remove db-push to azure

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
    
 services:
   db:
-    image: postgres
+    image: nsidjango.azurecr.io/postgres:latest
     ports:
       - "5432"
     environment:
