--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,14 +21,15 @@ jobs:
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
             cd app && docker-compose up --build -d
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/nsidjango:latest
+            docker tag webapp:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/nsidjango:${{ github.sha }}
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/nsidjango:${{ github.sha }}
 
         - name: 'Deploy Webapp to Azure'
           uses: 'azure/aci-deploy@v1'
           with:
             resource-group: ${{ secrets.RESOURCE_GROUP }}
             dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/nsidjango:latest
+            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/nsidjango:${{ github.sha }}
             registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
             registry-username: ${{ secrets.REGISTRY_USERNAME }}
             registry-password: ${{ secrets.REGISTRY_PASSWORD }}
