--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,17 +21,17 @@ jobs:
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            cd app && docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett:${{ github.sha }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett:${{ github.sha }}
+            cd app && docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
 
         - name: 'Deploy to Azure Container Instances'
           uses: 'azure/aci-deploy@v1'
           with:
             resource-group: ${{ secrets.RESOURCE_GROUP }}
             dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett:${{ github.sha }}
+            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
             registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
             registry-username: ${{ secrets.REGISTRY_USERNAME }}
             registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-            name: studentidrett-backend
+            name: studentidrett
             location: 'north europe'
