--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,15 +21,16 @@ jobs:
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            cd app && docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
+            cd app && docker-compose up --build -d
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/postgres:latest
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:latest
 
         - name: 'Deploy to Azure Container Instances'
           uses: 'azure/aci-deploy@v1'
           with:
             resource-group: ${{ secrets.RESOURCE_GROUP }}
             dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:${{ github.sha }}
+            image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/studentidrett-backend:latest
             registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
             registry-username: ${{ secrets.REGISTRY_USERNAME }}
             registry-password: ${{ secrets.REGISTRY_PASSWORD }}
