update postgres in docker-compose

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,7 +2,7 @@
 
   services:
     postgres:
-      image: studentidrett.azurecr.io/postgres:latest
+      image: postgres:latest
       ports:
         - "5432:5432"
       environment:
