change dockerfile gunicorn from -bind to --bind, add migration to docker-compose

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -16,6 +16,7 @@
       build:
         context: .
         dockerfile: Dockerfile
+      command: python manage.py migrate
       volumes:
         - .:/code
       ports:
