--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -16,7 +16,7 @@
       build:
         context: .
         dockerfile: Dockerfile
-      command: python manage.py migrate
+      command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
       volumes:
         - .:/code
       ports:
