add collectstatic-command to use in dev

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,5 +4,6 @@ RUN mkdir /code
 WORKDIR /code
 ADD . /code/
 RUN pip install -r requirements.txt
+RUN python manage.py collectstatic
 CMD ["gunicorn", "--bind", "0.0.0.0:80", "app.wsgi"]
 EXPOSE 80
