--- a/config/django/Dockerfile
+++ b/config/django/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD . /code/
+ADD ../../app /code/
 RUN pip install -r requirements.txt
 CMD ["gunicorn", "--bind", "0.0.0.0:80", "app.wsgi"]
 EXPOSE 2222 80
