--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,5 +21,5 @@ jobs:
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            cd app && docker-compose up --build -d
+            docker-compose up --build -d
             docker-compose push
