--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@
       image: studentidrett.azurecr.io/studentidrett-backend:latest
       build:
         context: app
-        dockerfile: config/Dockerfile
+        dockerfile: config/django/Dockerfile
       command: bash -c "cd app && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
       volumes:
         - .:/code
