--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@
     web:
       image: studentidrett.azurecr.io/studentidrett-backend:latest
       build:
-        context: app
+        context: .
         dockerfile: config/django/Dockerfile
       command: bash -c "cd app && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
       volumes:
