add ssh to run migrations in azure, update dockerfile to use alpine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@
       build:
         context: .
         dockerfile: config/django/Dockerfile
-      command: bash -c "cd app && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
       volumes:
         - .:/code
       ports:
