--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ inline-quotes = "double"
 max-complexity = 10
 dictionaries=en_US, python, technical, django
 exclude =
+    # No need to check local venv
+    */venv,
     # No need to traverse our git directory
     .git,
 
