--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -16,6 +16,7 @@ django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
 filelock==3.0.12
+flake8==3.8.3
 gunicorn==20.0.4
 identify==1.5.5
 idna==2.10
@@ -25,6 +26,7 @@ isort==5.5.3
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.5.0
 nose==1.3.7
@@ -35,6 +37,8 @@ Pillow==7.2.0
 pre-commit==2.7.1
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pyflakes==2.2.0
 pyparsing==2.4.7
 python-dotenv==0.14.0
 pytz==2020.1
