formatting with pre-commit

--- a/config/django/Dockerfile
+++ b/config/django/Dockerfile
@@ -22,6 +22,9 @@ RUN apt-get update \
 
 COPY config/django/sshd_config /etc/ssh/
 
+# Add support for flake8
+ADD setup.cfg /code/
+
 # CMD ["gunicorn", "--bind", "0.0.0.0:80", "app.wsgi"]
 EXPOSE 2222 80
 
