add env for DJANGO_SECRET_KEY to docker-compose, adjust settings for flake, add setup.cfg for flake, set max-length to 100

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,7 @@
       logging:
         driver: "json-file"
       environment:
+        DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
         POSTGRES_DB: ${POSTGRES_DB}
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
