--- a/.github/workflows/django-staging.yml
+++ b/.github/workflows/django-staging.yml
@@ -1,9 +1,9 @@
 on:
-  pull_request:
+  push:
     branches:
       - dev
 
-name: Backend build, test and push to Azure
+name: Stable backend build, test and push to Azure
 
 jobs:
     build-and-deploy:
@@ -39,14 +39,3 @@ jobs:
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
             docker-compose -f docker-compose.prod.yml push
-
-        - uses: azure/appservice-settings@v1
-          with:
-            app-name: 'kundestyrt-staging'
-            slot-name: 'staging'
-            app-settings-json: '${{ secrets.APP_SETTINGS }}'
-            general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "true"}'
-
-        - name: Azure logout
-          run: |
-            az logout
